tdf#168096: reset selection each time GetUnoText is called

ScCellObj represents the whole content of the cell; and its XText
must always cover it all. However, implementation (ScCellTextObj)
may get its "selection" (defining the actual range) out of sync,
after created initially, if content is changed using other objects.
It is a modification listener; but that doesn't help, because some
methods may manually re-assign selection after the actual content
change: see e.g. SvxUnoTextBase::insertString.

This change resets the selection of the cell object each time its
GetUnoText method is called. The EE_PARA_MAX value assigned to
start.nPara causes the needed processing in CheckSelection.

Change-Id: I94bc55ee3df7976dcaeaa9c4878059995e885e8c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190142
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins